refactor(api): migrate from Ollama to Google Gemini API

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "mermaid": "^11.8.1",
     "openai": "^5.9.0",
     "react": "^19.1.0",
